TimePickers Popper appearing behind the modal window fixed

--- a/src/components/AddTimeSlotModal/AddTimeSlotModal.scss
+++ b/src/components/AddTimeSlotModal/AddTimeSlotModal.scss
@@ -11,6 +11,7 @@
     top: 25%;
     left: 50%;
     transform: translateX(-50%);
+    overflow: visible;
     
     // dialog{
     //     margin-top: -100px;
@@ -60,5 +61,4 @@
     font-weight: 500;
     width: 250px;
    }
-   
 }
